overflow-fix

--- a/main.css
+++ b/main.css
@@ -15,13 +15,13 @@ html {
 
 body {
     overflow: hidden;
-
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     height: 100%;
 }
 
 main {
     height: 100%;
+    overflow: hidden;
 }
 
 .flex {
